<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <description>Internationalization for PDFsam</description>
    <parent>
        <groupId>org.pdfsam</groupId>
        <artifactId>pdfsam-parent</artifactId>
        <version>5.3.2-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>pdfsam-i18n</artifactId>
    <packaging>jar</packaging>
    <name>PDFsam internationalization</name>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <release>24</release>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                    <fork>true</fork>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Automatic-Module-Name>org.pdfsam.i18n</Automatic-Module-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.googlecode.gettext-commons</groupId>
                <artifactId>gettext-maven-plugin</artifactId>
                <version>1.2.4</version>
                <configuration>
                    <keysFile>pdfsam.pot</keysFile>
                    <poDirectory>po</poDirectory>
                    <targetBundle>org.pdfsam.i18n.Messages</targetBundle>
                    <outputFormat>properties</outputFormat>
                </configuration>
                <executions>
                    <execution>
                        <id>gettext-dist</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>dist</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            </plugins>
            <resources>
                <resource>
                    <directory>.</directory> <!-- means root of the module -->
                    <includes>
                        <include>org/pdfsam/i18n/Messages.properties</include>
                    </includes>
                </resource>
            </resources>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.pdfsam</groupId>
            <artifactId>eventstudio</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
        </dependency>
    </dependencies>

</project>
